cargo-features = ["edition2021"]

[package]
name = "owmath"
authors = ["Andrzej Owsikowski <ajoinfinity@gmail.com>"]
homepage = "https://ajoinfinity.com/"
repository = "https://github.com/andy-ow/owmath"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Quaternions, basic functions"
keywords = ["quaternion", "math"]
categories = ["mathematics", "science"]

[lib]
name = "owmath"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2.8"